<resources>
    <string name="app_name">DHIS2 Metadata dictionary</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="prompt_server_url">Server url</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_server_url">Not a valid server url</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must have more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to main -->
    <string name="title_activity_main">Metadata List</string>
    <string name="welcome">"Welcome!"</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet"</string>
    <string name="syncing_metadata">Syncing metadata…</string>
    <string name="sync_metadata">Sync metadata</string>
    <string name="wiping_data">Wiping data…</string>
    <string name="log_out">Log out</string>
    <string name="wipe_data">Wipe data</string>
    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">user@email.com</string>
    <string name="session">Session</string>
    <!-- Strings related to main activity -->
    <string name="programs">Programs</string>
    <string name="data_sets">Data sets</string>
    <string name="zero">0</string>
    <string name="metadata_list">Metadata list</string>
    <string name="welcome_user">Welcome Joseph</string>
    <!-- String data set list-->
    <string name="title_activity_data_set_home">Data set list</string>
    <!-- String program list-->
    <string name="title_activity_program_home">Program list</string>
    <string name="item_subtitle">Item subtitle</string>
    <string name="item_title">Item title</string>
    <string name="data_set_info">Data Set info</string>
    <string name="program_info">Program info</string>
    <string name="data_set_id">UID</string>
    <string name="data_set_name">Name</string>
    <string name="data_set_period_type">Period type</string>
    <string name="data_set_description">Description</string>
    <string name="data_element">Data element</string>
    <string name="indicators">Indicators</string>
    <string name="data_set_section">Data set section</string>
    <string name="program_id">UID</string>
    <string name="program_name">Name</string>
    <string name="program_description">Description</string>
    <string name="program_incident_date">Incident date</string>
    <string name="program_enrollment_date">Enrollment date</string>
    <string name="program_tracked_entity_type">Tracked entity type</string>
    <string name="program_can_capture_coordinate">Capture coordinate</string>
    <string name="program_attributes">Program Attributes</string>
    <string name="program_sections">Program sections</string>
    <string name="program_indicators">Program indicators</string>
    <string name="related_metadata_list">Related Metadata List</string>
    <string name="program_stages">Program stages</string>
    <string name="data_element_info">Data element info</string>
    <string name="program_stage_info">Program stage info</string>
    <string name="program_stage_list">program stage list</string>
    <string name="program_indicator_info">Program indicator info</string>
    <string name="program_indicator_list">Program indicator list</string>
    <string name="program_attribute_info">Program attribute info</string>
    <string name="program_attribute_list">Program attribute list</string>
    <string name="indicator_info">Indicator info</string>
    <string name="indicator_list">Indicator list</string>
    <string name="data_element_count">Count</string>
    <string name="indicator_count">Count</string>
    <string name="indicator_name">Name</string>
    <string name="option_list">List of options</string>
    <string name="data_element_name">Name</string>
    <string name="program_attribute_name">Name</string>
    <string name="data_element_form_name">Form name</string>
    <string name="data_element_uid">UID</string>
    <string name="data_element_aggregation_type">Aggregation type</string>
    <string name="data_element_value_type">Value type</string>
    <string name="data_element_category_combo_uid">Category Combo Uid</string>
    <string name="data_element_category_combo_name">Category Combo Name</string>
    <string name="data_element_description">Description</string>
    <string name="indicator_uid">UID</string>
    <string name="indicator_description">Description</string>
    <string name="indicator_numerator_description">Description</string>
    <string name="indicator_numerator">Numerator</string>
    <string name="indicator_denominator">Denominator</string>
    <string name="indicator_denominator_description">Denominator Description</string>
    <string name="program_program_attribute_name">Program name</string>
    <string name="program_program_attribute_count">Count</string>
</resources>
