<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_name" />

                <TextView
                    android:id="@+id/programName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:text="@string/program_name"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_id" />

                <TextView
                    android:id="@+id/programId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:text="@string/program_id"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_description" />

                <TextView
                    android:id="@+id/programDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:text="@string/program_description"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_incident_date" />

                <TextView
                    android:id="@+id/programIncidentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:text="@string/program_incident_date"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_enrollment_date" />

                <TextView
                    android:id="@+id/programEnrollmentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:text="@string/program_enrollment_date"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/programTrackedEntityTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_tracked_entity_type"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/programTrackedEntityType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:text="@string/program_tracked_entity_type"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="visible" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_can_capture_coordinate" />

                <TextView
                    android:id="@+id/programCanCaptureCoordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="125dp"
                    android:text="@string/program_can_capture_coordinate"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>