<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dataSet.DataSetInfoActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dataSetInfoToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
       <androidx.cardview.widget.CardView
           android:layout_marginVertical="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_margin="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginVertical="5dp">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/data_set_name">
                   </TextView>
                   <TextView
                       android:id="@+id/dataSetName"
                       android:paddingStart="80dp"
                       android:textColor="@color/colorPrimary"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="name">
                   </TextView>
               </RelativeLayout>
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginVertical="5dp">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/data_set_id">
                   </TextView>
                   <TextView
                       android:id="@+id/dataSetId"
                       android:paddingStart="80dp"
                       android:textColor="@color/colorPrimary"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="id">
                   </TextView>
               </RelativeLayout>

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginVertical="5dp">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/data_set_period_type">
                   </TextView>
                   <TextView
                       android:id="@+id/dataSetPeriodType"
                       android:paddingStart="80dp"
                       android:textColor="@color/colorPrimary"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Period type">
                   </TextView>
               </RelativeLayout>
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginVertical="5dp">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/data_set_description">
                   </TextView>
                   <TextView
                       android:id="@+id/dataSetDescription"
                       android:paddingStart="80dp"
                       android:textColor="@color/colorPrimary"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Description">
                   </TextView>
               </RelativeLayout>
           </LinearLayout>
       </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dataSetDataElementCard"
            android:layout_width="match_parent"
            android:layout_marginVertical="5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/data_element"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/dataSetDataElementCount"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:text ="@string/zero"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dataSetSectionCard"
            android:layout_width="match_parent"
            android:layout_marginVertical="5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/data_set_section"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/dataSetSectionCount"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:text ="@string/zero"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dataSetIndicatorCard"
            android:layout_width="match_parent"
            android:layout_marginVertical="5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/indicators"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/dataSetIndicatorCount"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:text ="@string/zero"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>