<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dataSet.pages.DataSetDataElementInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dataSetDataElementInfoToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_element_uid"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dataSetDataElementUid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="140dp"
                        android:text="Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_element_name"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dataSetDataElementName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="140dp"
                        android:text="Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_element_form_name"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dataSetDataElementFormName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="140dp"
                        android:text="Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_element_description"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dataSetDataElementDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="140dp"
                        android:text="Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_element_aggregation_type"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dataSetDataElementAggregationType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="140dp"
                        android:text="Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_element_value_type"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dataSetDataElementValueType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="140dp"
                        android:text="Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_element_category_combo_uid"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dataSetDataElementCategoryComboUid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="140dp"
                        android:text="Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/dataElementOptionSetCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/option_list"
                android:textAlignment="center" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dataElementOptionSetRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/content_list_item_card" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>